--- a/docker/production.yml
+++ b/docker/production.yml
@@ -1,26 +1,23 @@
 version: '3.3'
 services:
-    # redis_db:
-    #   image: redis:4.0-alpine
-    #   command: [ "redis-server" ]
-    # web-server:
-    #   image: nginx:alpine
-    #   ports:
-    #     - "443:443"
-    #     - "80:80"
-    #   volumes:
-    #     - ./letsencrypt:/etc/letsencrypt
-    #     - ./nginx.conf:/etc/nginx/nginx.conf
-    # janus-gateway:
-    #   image: canyan/janus-gateway:master_88df9449ac54f27afa29672cf092fac65a695c29
-    #   links:
-    #     - web-server
-    #   command: ["/usr/local/bin/janus", "-F", "/usr/local/etc/janus"]
-    #   ports:
-    #     - "10000-10200:10000-10200/udp"
-    #   volumes:
-    #     - ./janus/janus.jcfg:/usr/local/etc/janus/janus.jcfg  # might need to change this later, dk if this is best practice .... TODO  
-    #   restart: always
+    web-server:
+      image: nginx:alpine
+      ports:
+        - "443:443"
+        - "80:80"
+      volumes:
+        - ./letsencrypt:/etc/letsencrypt
+        - ./nginx.conf:/etc/nginx/nginx.conf
+    janus-gateway:
+      image: canyan/janus-gateway:master_88df9449ac54f27afa29672cf092fac65a695c29
+      links:
+        - web-server
+      command: ["/usr/local/bin/janus", "-F", "/usr/local/etc/janus"]
+      ports:
+        - "10000-10200:10000-10200/udp"
+      volumes:
+        - ./janus/janus.jcfg:/usr/local/etc/janus/janus.jcfg  # might need to change this later, dk if this is best practice .... TODO  
+      restart: always
     app:
       build: ../
       ports:
