--- a/docker/production.yml
+++ b/docker/production.yml
@@ -1,13 +1,13 @@
 version: '3.3'
 services:
-    # web-server:
-    #   image: nginx:alpine
-    #   ports:
-    #     - "443:443"
-    #     - "80:80"
-    #   volumes:
-    #     # - ./letsencrypt:/etc/letsencrypt
-    #     - ./nginx.conf:/etc/nginx/nginx.conf
+    web-server:
+      image: nginx:alpine
+      ports:
+        - "443:443"
+        - "80:80"
+      volumes:
+        # - ./letsencrypt:/etc/letsencrypt
+        - ./nginx.conf:/etc/nginx/nginx.conf
     # janus-gateway:
     #   image: canyan/janus-gateway:master_88df9449ac54f27afa29672cf092fac65a695c29
     #   links:
