--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -14,9 +14,9 @@ http {
     #   return 301 https://$server_name$request_uri;
   }
   server {
-      server_name r;
-      listen 443 ssl;
-      listen [::]:443 ssl;
+      server_name recor.tech;
+      listen 443;
+      listen [::]:443;
       # location / {
       #   limit_req zone=create burst=3 nodelay;
       #   proxy_pass http://app:5000/;  #whatever port your app runs on, do proper env vars
