updated production compose file

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -16,7 +16,7 @@ http {
   server {
       server_name recor.tech;
       listen 443;
-      listen [::]:443;
+      # listen [::]:443;
       # location / {
       #   limit_req zone=create burst=3 nodelay;
       #   proxy_pass http://app:5000/;  #whatever port your app runs on, do proper env vars
