--- a/docker/production.yml
+++ b/docker/production.yml
@@ -24,6 +24,8 @@ services:
         - "5000:5000"
       links:
         - web-server
+      depends_on:
+        - web-server
       environment:
         - COCKROACH_DB_URL=${COCKROACH_DB_URL}
 
