--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -11,6 +11,15 @@ http {
       listen 80 default_server;
       listen [::]:80 default_server;
       server_name recor.tech;
+      location / {
+        proxy_pass http://app:5000/;  #whatever port your app runs on, do proper env vars
+        proxy_http_version 1.1;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+      }
     #   return 301 https://$server_name$request_uri;
   }
   server {
