updated production compose file

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -11,6 +11,11 @@ http {
       listen 80 default_server;
       listen [::]:80 default_server;
       server_name recor.tech;
+      
+      location /static {
+        alias /var/www-data;
+      }
+
       location / {
         proxy_pass http://app:5000/;  #whatever port your app runs on, do proper env vars
         proxy_http_version 1.1;
