updated production compose file

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -12,10 +12,10 @@ http {
       listen [::]:80 default_server;
       server_name recor.tech;
       
-      location /static {
-        alias /var/www-data;
+      location /static/ {
+        alias /home/app/web/project/static/;
       }
-
+      
       location / {
         proxy_pass http://app:5000/;  #whatever port your app runs on, do proper env vars
         proxy_http_version 1.1;
