--- a/docker/production.yml
+++ b/docker/production.yml
@@ -7,17 +7,18 @@ services:
         - "80:80"
       volumes:
         # - ./letsencrypt:/etc/letsencrypt
+        - ../static:/home/app/web/project/static
         - ./nginx.conf:/etc/nginx/nginx.conf
-    # janus-gateway:
-    #   image: canyan/janus-gateway:master_88df9449ac54f27afa29672cf092fac65a695c29
-    #   links:
-    #     - web-server
-    #   command: ["/usr/local/bin/janus", "-F", "/usr/local/etc/janus"]
-    #   ports:
-    #     - "10000-10200:10000-10200/udp"
-    #   volumes:
-    #     - ./janus/janus.jcfg:/usr/local/etc/janus/janus.jcfg  # might need to change this later, dk if this is best practice .... TODO  
-    #   restart: always
+    # # janus-gateway:
+    # #   image: canyan/janus-gateway:master_88df9449ac54f27afa29672cf092fac65a695c29
+    # #   links:
+    # #     - web-server
+    # #   command: ["/usr/local/bin/janus", "-F", "/usr/local/etc/janus"]
+    # #   ports:
+    # #     - "10000-10200:10000-10200/udp"
+    # #   volumes:
+    # #     - ./janus/janus.jcfg:/usr/local/etc/janus/janus.jcfg  # might need to change this later, dk if this is best practice .... TODO  
+    # #   restart: always
     app:
       build: ../
       ports:
