--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -24,6 +24,16 @@ http {
           alias /home/app/web/project/static/js/;
       }
 
+      location /janus {
+        proxy_pass http://janus:8088/janus;  #whatever port your app runs on, do proper env vars
+        proxy_http_version 1.1;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+      }
+
       location /static/ {
         alias /home/app/web/project/static/;
       }
