--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -43,19 +43,21 @@ http {
   server {
       server_name recor.tech;
       listen 443;
-      # listen [::]:443;
-      # location / {
-      #   limit_req zone=create burst=3 nodelay;
-      #   proxy_pass http://app:5000/;  #whatever port your app runs on, do proper env vars
-      #   proxy_http_version 1.1;
-      #   proxy_set_header X-Forwarded-Proto https;
-      #   proxy_set_header Upgrade $http_upgrade;
-      #   proxy_set_header Connection 'upgrade';
-      #   proxy_set_header Host $host;
-      #   proxy_cache_bypass $http_upgrade;
-      # }
+      listen [::]:443;
+      
       location / {
         proxy_pass http://app:5000/;  #whatever port your app runs on, do proper env vars
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+      }
+
+      location /js/ {
+          alias /home/app/web/project/static/js/;
+      }
+
+      location /janus {
+        proxy_pass http://janus:8088/janus;  #whatever port your app runs on, do proper env vars
         proxy_http_version 1.1;
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header Upgrade $http_upgrade;
@@ -63,16 +65,7 @@ http {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
       }
-    #   location /janus {
-    #     proxy_pass http://janus:8088/janus;  #whatever port your app runs on, do proper env vars
-    #     proxy_http_version 1.1;
-    #     proxy_set_header X-Forwarded-Proto https;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection 'upgrade';
-    #     proxy_set_header Host $host;
-    #     proxy_cache_bypass $http_upgrade;
-    #   }
-    #   ssl_certificate /etc/letsencrypt/live/liteboard.io/fullchain.pem;
-    #   ssl_certificate_key /etc/letsencrypt/live/liteboard.io/privkey.pem;
+      ssl_certificate /etc/letsencrypt/live/liteboard.io/fullchain.pem;
+      ssl_certificate_key /etc/letsencrypt/live/liteboard.io/privkey.pem;
   }
 }
