--- a/docker/production.yml
+++ b/docker/production.yml
@@ -6,7 +6,7 @@ services:
         - "443:443"
         - "80:80"
       volumes:
-        # - ./letsencrypt:/etc/letsencrypt
+        - ./letsencrypt:/etc/letsencrypt
         - ../static:/home/app/web/project/static
         - ./nginx.conf:/etc/nginx/nginx.conf
     janus:
