--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -44,7 +44,7 @@ http {
       server_name recor.tech;
       listen 443;
       listen [::]:443;
-      
+
       location / {
         proxy_pass http://app:5000/;  #whatever port your app runs on, do proper env vars
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -65,7 +65,7 @@ http {
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
       }
-      ssl_certificate /etc/letsencrypt/live/liteboard.io/fullchain.pem;
-      ssl_certificate_key /etc/letsencrypt/live/liteboard.io/privkey.pem;
+      ssl_certificate /etc/letsencrypt/live/recor.tech/fullchain.pem;
+      ssl_certificate_key /etc/letsencrypt/live/recor.tech/privkey.pem;
   }
 }
