--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -42,8 +42,8 @@ http {
   }
   server {
       server_name recor.tech;
-      listen 443;
-      listen [::]:443;
+      listen 443 ssl;
+      listen [::]:443 ssl;
 
       location / {
         proxy_pass http://app:5000/;  #whatever port your app runs on, do proper env vars
