--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -47,9 +47,12 @@ http {
 
       location / {
         proxy_pass http://app:5000/;  #whatever port your app runs on, do proper env vars
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_redirect off;
+        proxy_cache_bypass $http_upgrade;
       }
 
       location /js/ {
