--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,50 @@
 bidict==0.21.2
+cachetools==4.2.0
+certifi==2020.12.5
 cffi==1.14.4
+chardet==4.0.0
 click==7.1.2
 cockroachdb==0.3.5
+dataclasses==0.8
 Flask==1.1.2
 Flask-SocketIO==5.0.1
 Flask-SQLAlchemy==2.4.4
 gevent==21.1.0
 gevent-websocket==0.10.1
+google-api-core==1.25.0
+google-auth==1.24.0
+google-cloud==0.34.0
+google-cloud-core==1.5.0
+google-cloud-storage==1.35.0
+google-cloud-vision==2.0.0
+google-crc32c==1.1.1
+google-resumable-media==1.2.0
+googleapis-common-protos==1.52.0
 greenlet==1.0.0
+grpcio==1.34.1
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+libcst==0.3.16
 MarkupSafe==1.1.1
+mypy-extensions==0.4.3
+proto-plus==1.13.0
+protobuf==3.14.0
 psycopg2==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
 python-engineio==4.0.0
 python-socketio==5.0.4
+pytz==2020.5
+PyYAML==5.3.1
+requests==2.25.1
+rsa==4.7
+six==1.15.0
 SQLAlchemy==1.3.22
+typing-extensions==3.7.4.3
+typing-inspect==0.6.0
+urllib3==1.26.2
 Werkzeug==1.0.1
 zope.event==4.5.0
 zope.interface==5.2.0
-google-cloud-storage==1.35.0
-
