--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -56,7 +56,16 @@ http {
       }
 
       location /js/ {
-          alias /home/app/web/project/static/js/;
+        alias /home/app/web/project/static/js/;
+      }
+
+      location /css/ {
+        alias /home/app/web/project/static/css/;
+      }
+
+
+      location /images/ {
+        alias /home/app/web/project/static/images/;
       }
 
       location /janus {
