--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -2,6 +2,9 @@ events {
   worker_connections  4096;  ## Default: 1024
 }
 http {
+  include  mime.types;
+  sendfile on;
+
   map $request_method $limit {
     default         "";
     POST            $binary_remote_addr;
@@ -60,7 +63,9 @@ http {
       }
 
       location /css/ {
+        add_header  Content-Type  text/css;
         alias /home/app/web/project/static/css/;
+        
       }
 
 
