--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ google-auth==1.24.0
 google-cloud==0.34.0
 google-cloud-core==1.5.0
 google-cloud-storage==1.35.0
+google-cloud-vision==2.0.0
 google-crc32c==1.1.1
 google-resumable-media==1.2.0
 googleapis-common-protos==1.52.0
@@ -26,6 +27,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 libcst==0.3.16
 MarkupSafe==1.1.1
+monkeylearn==3.5.2
 mypy-extensions==0.4.3
 proto-plus==1.13.0
 protobuf==3.14.0
